# jas-image-sorter

./: get_extensions.py  image_organize.py  pyproject.toml  variables.py
