[tool.poetry]
name = "image-sorter"
version = "0.1.0"
description = ""
authors = ["Jas Palermo <jasmes@gmail.com>"]
readme = "README.md"
packages = [{include = "image_sorter"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
